--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "lodash": "^4.17.11",
+    "material-design-icons-iconfont": "^4.0.4",
     "vue": "^2.5.21",
     "vue-router": "^3.0.1",
     "vuetify": "^1.3.15",
